# VEILPIERCER

./: .gitignore  LICENSE  README.md  check_schema.py  claudecraft_audit.md  demo.py  demo_state.json  ollama_trace.json  ollama_trace.jsonl  pitch_card.html  pyproject.toml  session_alpha.json
examples/: audit_repo.py  deep_audit_louz514.py  hallucination_demo.py  langgraph_fix.py  ollama_tracing.py  time_machine_demo.py
veilpiercer/: __init__.py  __main__audit.py  audit.py  callback.py  cli.py  db.py  hallucination.py  langchain_cb.py  logger.py  ollama_hook.py  session_integrity.py  state_guard.py  swarm_intel.py  time_machine.py  tracer.py
veilpiercer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
